--- a/src/assets/card.scss
+++ b/src/assets/card.scss
@@ -30,7 +30,7 @@
 
 .Column .head {
   background: rgba(0, 0, 0, 0.1);
-  border-radius: 0.5vh 0.5vh 0px 0px;
+  border-radius: 0.5vh 0.5vh 0 0;
   position: relative;
   width: 100%;
   height: 1vh;
@@ -58,4 +58,15 @@
   height: 3.5vh;
   width: 3.5vh;
   border-radius: 50%;
+}
+
+@media only screen and (max-width: 600px) {
+  .Column {
+    margin: auto;
+    margin-top: 10vh;
+    width: 80%;
+  }
+  .Column:first-child {
+    margin-top: 0;  
+  }
 }
