--- a/src/assets/mainstyle.scss
+++ b/src/assets/mainstyle.scss
@@ -6,29 +6,86 @@
 
 #todo {
   background-color: #3D5A6C;
-  position: absolute;
-  top: 25vh;
-  left: 3%;
+  // position: absolute;
+  // top: 25vh;
+  // left: 3%;
 }
 
 #in-progress {
   background-color: #89B6A5;
-  position: absolute;
-  top: 25vh;
-  left: 28%;
+  // position: absolute;
+  // top: 25vh;
+  // left: 28%;
 }
 
 #review {
   background-color: #DD9787;
-  position: absolute;
-  top: 25vh;
-  left: 53%;
+  // position: absolute;
+  // top: 25vh;
+  // left: 53%;
 }
 
 
 #done {
   background-color: #9E7682;
-  position: absolute;
-  top: 25vh;
-  left: 78%;
+  // position: absolute;
+  // top: 25vh;
+  // left: 78%;
+}
+
+.newTodoWrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 5vh;
+  left: 75vw;
+}
+
+.newTodo {
+  height: 4vmin;
+  width: 25vmin;
+  padding: 0.5vmin;
+  border-radius: 0.5vh;
+  border: none;
+  font-size: 2vmin;
+}
+
+.submit {
+  border: none;
+  border-radius: 0.5vh;
+  height: 5vmin;
+  width: 10vmin;
+  margin-left: 2vmin;
+  background-color: #3D5A6C; 
+  font-size: 2vmin;
+}
+
+.Columns {
+  margin: 20vh 5vh 0 5vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+@media only screen and (max-width: 600px) {
+  .Columns {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .newTodoWrapper {
+    left: 25vw;
+  }
+
+  .newTodo {
+    padding: 1.5vh;
+    font-size: 2.5vh;
+  }
+
+  .submit {
+    height: 5vh;
+  }
+
 }
