--- a/src/assets/mainstyle.scss
+++ b/src/assets/mainstyle.scss
@@ -36,10 +36,11 @@
 .newTodoWrapper {
   position: relative;
   display: flex;
+  width: 30vw;
   justify-content: center;
   align-items: center;
   top: 5vh;
-  left: 75vw;
+  left: 70vw;
 }
 
 .newTodo {
@@ -76,7 +77,7 @@
   }
 
   .newTodoWrapper {
-    left: 25vw;
+    left: 55vw
   }
 
   .newTodo {
@@ -86,6 +87,8 @@
 
   .submit {
     height: 5vh;
+    font-size: 2.5vmin;
+    padding: 1.5vmin;
   }
 
 }
